# MiAu-

./: .gitignore  LICENSE  LICENSE.pt-BR  README.md  app.py  package-lock.json  package.json  pyproject.toml  script_cores.py
apps/api/: package.json
apps/api/src/: app.module.ts  main.ts  swagger.constants.ts  swagger.ts  vercel.ts
apps/api/src/agendamentos/: agendamentos.controller.ts  agendamentos.module.ts  agendamentos.service.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/api/src/avisos/: avisos.controller.ts  avisos.module.ts  (+1 more)
apps/web/: next.config.ts  package.json  tsconfig.tsbuildinfo  vercel.json
apps/web/api/: nest.ts
apps/web/app/: globals.css  layout.tsx
apps/web/components/: DashboardLayout.tsx  Modal.tsx
apps/web/lib/: api.ts  useAuth.ts
backend/: app_api.py  auth.py  database.py  main.py  openapi_config.py  openapi_tags.py  requirements.txt  schemas.py
backend/routers/: api_routes.py  auth_routes.py
cursor-rules/: conversas-cadu-cursor.md  deploy-vercel.md  design-system.md  projeto-contexto.md
database/: popular_teste.py  schema.sql  setup_db.py
deploy/: .env.example  package.json  pyproject.toml  vercel.json
docs/: API-Swagger.md  SWAGGER-HUB-IMPORT.md  openapi.json  openapi.yaml
docs/postman/: MiAu-Login.postman_collection.json  MiAu.postman_environment.json
frontend/: app.py  index.html
frontend/css/: style.css
frontend/js/: api.js  app.js
public/: index.html
public/css/: palette.css  style.css
public/js/: api.js
scripts/: export-openapi.mjs  export_openapi.py
(+29 files in other folders)
