[project]
name = "miau"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pymysql",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "pydantic",
    "email-validator",
    "mangum",
]

[tool.vercel.scripts]
build = "mkdir -p public && cp frontend/index.html public/ && cp -r frontend/css frontend/js frontend/imagens public/"

[tool.vercel]
entrypoint = "backend.app_api:app"
